<resources>
    <string name="app_name">Bunker</string>
    <string name="onBoarding_image">OnBoarding Image</string>
    <string name="OnBoardButtonText">Empezar</string>
    <string name="company_name">Bunker App</string>
    <string name="company_logo_description">Company Logo</string>
    <string name="log_in_text">Inicio de sesión</string>
    <string name="username_placeholder">usuario</string>
    <string name="field_username_label">Usuario:</string>
    <string name="password_placeholder">contraseña</string>
    <string name="field_password_label">Contraseña:</string>
    <string name="welcome_title">Welcome</string>
    <string name="title_activity_maps">Map</string>
    <string name="back_action_content_description">Back Action</string>
    <string name="register_title">Registro</string>
    <string name="step_2_subtitle">Ubica tu espacio</string>
    <string name="continue_label">Continuar</string>
    <string name="step_1_icon_description">Step 1 Icon</string>
    <string name="register_link">¿No tienes una cuenta? Click aquí para registrarte</string>
    <string name="sign_up_title">Registro</string>
    <string name="cancel_text">Cancelar</string>
    <string name="sign_up_text">Regístrate</string>
    <string name="item_home_title">Inicio</string>
    <string name="item_notification_title">Notificaciones</string>
    <string name="item_configuration_title">Configuración</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment_text">Home Fragment</string>
    <string name="notifications_fragment_text">Notifications Fragment</string>
    <string name="create_space_first_message">Medidas de tu espacio</string>
    <string name="width_label">Ancho:</string>
    <string name="subtitle_text_step_one">Medidas de tu espacio</string>
    <string name="height_label">Largo :</string>
    <string name="area_label">Area :</string>
    <string name="width_placeholder">Ancho</string>
    <string name="height_placeholder">Largo</string>
    <string name="area_placeholder">Área</string>
    <string name="subtitle_text_two_step_one">Título para tu espacio</string>
    <string name="subtitle_text_description_step_one">Descripción</string>
    <string name="disable_label_button">Deshabilitar</string>
    <string name="enable_label_button">Habilitar</string>
    <string name="details_label_button">Ver Espacio</string>
    <string name="status_default_available_label">Disponible</string>
    <string name="preview_image_content_description">Vista Previa de la foto del espacio</string>
    <string name="subtitle_text_step_four">Servicios de tu espacio</string>
    <string name="step_3_subtitle">Fotos de tu espacio</string>
    <string name="space_photo_create_description">Photo of Space</string>
    <string name="user_account_label">Cuenta de Usuario</string>
    <string name="ayuda">Ayuda</string>
    <string name="t_rminos_y_condiciones">Términos y Condiciones</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="finish_label_button">terminar</string>
    <string name="soles">S/.</string>
    <string name="precio_del_alquiler">Precio del Alquiler:</string>
    <string name="tipo_de_espacio">Tipo de Espacio:</string>
    <string name="detalles_del_espacio">Detalles del Espacio</string>
    <string name="estado">Estado:</string>
    <string name="home_fragment_title">Mis Espacios</string>
    <string name="price_label">Precio</string>
    <string name="form_title">Registra tus datos</string>
    <string name="commercial_name">Nombre Comercial:</string>
    <string name="ruc_placeholder">RUC</string>
    <string name="commercial_name_placeholder">Nombre Comercial</string>
    <string name="names">Nombres:</string>
    <string name="names_placeholder">Nombres</string>
    <string name="last_names">Apellidos:</string>
    <string name="last_names_placeholder">Apellidos</string>
    <string name="doc_type_placeholder">Tipo de Documento</string>
    <string name="doc_type">Tipo de Documento:</string>
    <string name="doc_num">Número de Documento:</string>
    <string name="doc_num_placeholder">Número de Documento</string>
    <string name="cel_number">Número de Celular:</string>
    <string name="cel_number_placeholder">Número de Celular</string>
    <string name="ruc">RUC:</string>
    <string name="accept_terms_conditions">Acepto los Términos y Condiciones</string>
    <string name="registrar">REGISTRAR</string>
    <string name="unique_visitors_label">Visitantes Únicos:</string>
</resources>
