<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modelViews.activities.LoginActivity">

    <TextView
        android:id="@+id/company_name_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/company_name"
        android:fontFamily="cursive"
        android:textSize="32sp"/>

    <ImageView
        android:id="@+id/company_logo_login"
        app:layout_constraintTop_toBottomOf="@id/company_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:contentDescription="@string/company_logo_description"
        android:src="@drawable/logo_bunker"
        android:layout_marginTop="32dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_fields_container"
        app:layout_constraintTop_toBottomOf="@id/company_logo_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/user_field_text"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:text="@string/field_username_label"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="180dp"
                android:id="@+id/user_field_edit_text"
                app:layout_constraintStart_toEndOf="@id/user_field_text"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp"
                android:hint="@string/username_placeholder"
                android:textSize="16sp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/password_field_text"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/user_field_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:text="@string/field_password_label"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:inputType="textPassword"
                android:id="@+id/password_field_edit_text"
                app:layout_constraintStart_toEndOf="@id/password_field_text"
                app:layout_constraintTop_toBottomOf="@id/user_field_edit_text"
                android:layout_marginStart="18dp"
                android:hint="@string/password_placeholder"
                android:textSize="16sp"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_fields_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_text"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="cursive"
        android:text="@string/register_link"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>