<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modelViews.OnBoardingActivity">

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_title"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/onBoardingImage"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:contentDescription="@string/onBoarding_image"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_title"
        app:srcCompat="@drawable/logo_bunker" />
    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onBoardingImage"
        style="@style/TextAppearance.AppCompat.Button"
        android:textSize="28sp"
        android:fontFamily="cursive"
        android:text="@string/OnBoardButtonText"/>
</androidx.constraintlayout.widget.ConstraintLayout>